--- a/index.html
+++ b/index.html
@@ -1,280 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>My Site — Home</title>
-  <meta name="description" content="A simple, standard index page." />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
-  <style>
-    :root {
-      --bg: #0f172a;
-      --panel: #111827;
-      --text: #e5e7eb;
-      --muted: #9ca3af;
-      --accent: #60a5fa;
-      --accent-2: #34d399;
-      --radius: 12px;
-    }
-    * { box-sizing: border-box; }
-    html, body { height: 100%; }
-    body {
-      margin: 0;
-      font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      color: var(--text);
-      background: radial-gradient(1200px 800px at 20% -10%, #1f2937 0%, var(--bg) 60%) no-repeat,
-                  linear-gradient(180deg, #0b1022 0%, #0f172a 100%);
-      line-height: 1.6;
-    }
-    a { color: var(--accent); text-decoration: none; }
-    a:hover { text-decoration: underline; }
-
-    header {
-      position: sticky; top: 0; z-index: 10;
-      background: rgba(17, 24, 39, 0.6);
-      backdrop-filter: saturate(140%) blur(12px);
-      border-bottom: 1px solid rgba(255,255,255,0.08);
-    }
-    .container {
-      max-width: 1100px; margin: 0 auto; padding: 0 20px;
-    }
-    .navbar {
-      display: flex; align-items: center; justify-content: space-between;
-      padding: 14px 0;
-    }
-    .brand { display: flex; align-items: center; gap: 10px; font-weight: 600; }
-    .brand-badge {
-      width: 28px; height: 28px; border-radius: 8px;
-      background: linear-gradient(135deg, var(--accent), var(--accent-2));
-      box-shadow: 0 6px 18px rgba(96,165,250,0.45);
-    }
-    nav ul { display: flex; gap: 18px; list-style: none; margin: 0; padding: 0; }
-    nav a { color: var(--text); opacity: 0.9; }
-    nav a[aria-current="page"] { color: white; font-weight: 600; }
-
-    .hero {
-      padding: 72px 0 40px;
-      text-align: center;
-    }
-    .hero h1 {
-      margin: 0 0 10px;
-      font-size: clamp(28px, 5vw, 44px);
-      line-height: 1.2;
-      letter-spacing: -0.02em;
-    }
-    .hero p {
-      margin: 0 auto;
-      max-width: 720px;
-      color: var(--muted);
-      font-size: clamp(14px, 2.4vw, 18px);
-    }
-    .cta {
-      margin-top: 22px; display: inline-flex; gap: 12px;
-    }
-    .btn {
-      display: inline-flex; align-items: center; justify-content: center;
-      padding: 10px 16px; border-radius: 10px; border: 1px solid rgba(255,255,255,0.12);
-      color: white; background: rgba(255,255,255,0.05); backdrop-filter: blur(6px);
-      transition: transform .12s ease, background .12s ease, border-color .12s ease;
-    }
-    .btn:hover { transform: translateY(-1px); background: rgba(255,255,255,0.08); }
-    .btn.primary {
-      background: linear-gradient(135deg, var(--accent), var(--accent-2));
-      border: none; box-shadow: 0 10px 22px rgba(96,165,250,0.35);
-    }
-
-    .grid {
-      display: grid; grid-template-columns: repeat(12, 1fr); gap: 18px;
-      margin: 28px 0 60px;
-    }
-    .card {
-      grid-column: span 12;
-      padding: 18px; border-radius: var(--radius);
-      background: rgba(17, 24, 39, 0.6);
-      border: 1px solid rgba(255,255,255,0.06);
-    }
-    .card h3 { margin: 6px 0 8px; }
-    .card p { margin: 0; color: var(--muted); }
-    @media (min-width: 720px) {
-      .card { grid-column: span 4; }
-    }
-
-    section.content {
-      background: rgba(255,255,255,0.02);
-      border-top: 1px solid rgba(255,255,255,0.06);
-      border-bottom: 1px solid rgba(255,255,255,0.06);
-      padding: 40px 0;
-    }
-    .content h2 { margin-top: 0; }
-    .two-col {
-      display: grid; grid-template-columns: 1fr; gap: 22px;
-    }
-    @media (min-width: 920px) {
-      .two-col { grid-template-columns: 1.2fr 0.8fr; }
-    }
-    .panel {
-      padding: 18px; border-radius: var(--radius);
-      background: rgba(17, 24, 39, 0.55);
-      border: 1px solid rgba(255,255,255,0.06);
-    }
-    pre, code {
-      font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", monospace;
-      font-size: 0.95em;
-    }
-    pre {
-      margin: 0; padding: 14px; overflow: auto; border-radius: 10px;
-      background: #0b1022; border: 1px solid rgba(255,255,255,0.06);
-    }
-
-    footer {
-      padding: 28px 0; color: var(--muted); font-size: 14px; text-align: center;
-    }
-  </style>
-  <!--
-    This is a generic starter index.html.
-    Customize text, colors, and sections to suit your project.
-  -->
-  <noscript>Enable JavaScript for best experience.</noscript>
-  <meta name="color-scheme" content="light dark">
-  <link rel="icon" href="data:,">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="theme-color" content="#0f172a" />
-  <meta name="robots" content="index,follow" />
-  <meta name="og:title" content="My Site — Home" />
-  <meta name="og:description" content="A simple, standard index page." />
-  <meta name="og:type" content="website" />
-  <meta name="og:url" content="/" />
-  <meta name="og:image" content="/og.png" />
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="My Site — Home" />
-  <meta name="twitter:description" content="A simple, standard index page." />
-  <meta name="twitter:image" content="/og.png" />
-  <style>
-    /* Reduce motion for users with preferences */
-    @media (prefers-reduced-motion: reduce) {
-      * { animation: none !important; transition: none !important; }
-    }
-  </style>
-  <script>
-    // Respect user's color scheme by default
-    const scheme = window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
-    document.documentElement.setAttribute('data-theme', scheme);
-  </script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Git Learning</title>
 </head>
 <body>
-  <header>
-    <div class="container navbar" role="navigation" aria-label="Main">
-      <div class="brand">
-        <div class="brand-badge" aria-hidden="true"></div>
-        <a href="/" aria-current="page">My Site</a>
-      </div>
-      <nav>
-        <ul>
-          <li><a href="/" aria-current="page">Home</a></li>
-          <li><a href="#features">Features</a></li>
-          <li><a href="#docs">Docs</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-
-  <main class="container">
-    <section class="hero" id="hero">
-      <h1>Build, Ship, and Iterate Faster</h1>
-      <p>
-        A minimal and modern starter page. Clean structure, responsive by default,
-        and easy to customize. Perfect for demos, placeholders, or getting started quickly.
-      </p>
-      <div class="cta">
-        <a class="btn primary" href="#features">Explore Features</a>
-        <a class="btn" href="#docs">Read the Docs</a>
-      </div>
-    </section>
-
-    <section aria-labelledby="features-title">
-      <h2 id="features-title" style="margin: 0 0 12px">Features</h2>
-      <div class="grid" id="features">
-        <article class="card">
-          <h3>Fast & Lightweight</h3>
-          <p>Zero dependencies. Simple HTML, CSS, and a touch of JS.</p>
-        </article>
-        <article class="card">
-          <h3>Responsive</h3>
-          <p>Mobile-first layout that scales up gracefully to large screens.</p>
-        </article>
-        <article class="card">
-          <h3>Accessible</h3>
-          <p>Uses semantic markup and ARIA roles where helpful.</p>
-        </article>
-      </div>
-    </section>
-  </main>
-
-  <section class="content" id="docs" aria-labelledby="docs-title">
-    <div class="container two-col">
-      <div>
-        <h2 id="docs-title">Getting Started</h2>
-        <p>
-          Copy this file as <code>index.html</code>, customize the text,
-          and replace colors or fonts to match your brand. Add sections as needed.
-        </p>
-        <div class="panel" style="margin-top: 12px;">
-          <h3>Quick Commands</h3>
-          <pre><code># Install a local HTTP server
-npm i -g serve
-
-# Start a simple server in the current folder
-serve -p 5173
-
-# Or use Python
-python -m http.server 8000
-</code></pre>
-        </div>
-      </div>
-      <aside class="panel" aria-label="Sidebar">
-        <h3>Tips</h3>
-        <ul>
-          <li>Keep copy short and scannable.</li>
-          <li>Use semantic elements for structure.</li>
-          <li>Test on mobile and desktop.</li>
-          <li>Optimize images for performance.</li>
-        </ul>
-      </aside>
-    </div>
-  </section>
-
-  <section class="container" id="contact" aria-labelledby="contact-title" style="padding: 36px 0;">
-    <h2 id="contact-title">Contact</h2>
-    <p>
-      Have feedback? <a href="mailto:hello@example.com">Email us</a> or
-      open an issue on your favorite platform.
-    </p>
-  </section>
-
-  <footer>
-    <div class="container">
-      <p>© <span id="year"></span> My Site. All rights reserved.</p>
-    </div>
-  </footer>
-
-  <script>
-    // Simple JS: update year and handle smooth scroll
-    document.getElementById('year').textContent = new Date().getFullYear();
-    document.querySelectorAll('a[href^="#"]').forEach(a => {
-      a.addEventListener('click', e => {
-        const id = a.getAttribute('href').slice(1);
-        const el = document.getElementById(id);
-        if (el) {
-          e.preventDefault();
-          el.scrollIntoView({ behavior: 'smooth', block: 'start' });
-          history.replaceState(null, '', '#' + id);
-        }
-      });
-    });
-  </script>
+    Easier stuff
 </body>
 </html>
-
